--- a/style.css
+++ b/style.css
@@ -80,7 +80,13 @@ main {
 
 /* Circle button */
 
-/* .circle-btn::after {
+.circle-btn {
+  background-color: var(--accent-color);
+  z-index: 1;
+  overflow: hidden;
+}
+
+.circle-btn::after {
   content: "";
   position: absolute;
   left: 0;
@@ -88,4 +94,12 @@ main {
   width: 100%;
   height: 100%;
   background-color: var(--std-color);
-} */
+  z-index: -1;
+  border-radius: 50%;
+  transform: scale(1.5);
+  transition: transform 0.5s;
+}
+
+.circle-btn:hover::after {
+  transform: scale(0);
+}
