--- a/style.css
+++ b/style.css
@@ -103,3 +103,22 @@ main {
 .circle-btn:hover::after {
   transform: scale(0);
 }
+
+/* Underline button */
+.ul-btn::after {
+  content: "";
+  position: absolute;
+  --ul-btn-border: 3px;
+  border-bottom: var(--ul-btn-border) solid var(--accent-color);
+  width: 100%;
+  height: 100%;
+  right: 0;
+  bottom: 0;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+  transform-origin: left;
+}
+
+.ul-btn:hover::after {
+  transform: scaleX(1);
+}
